# rm-pleno-answer

./: Dockerfile  Makefile  conftest.py  docker-compose.yml  env.example  pyproject.toml  pytest.ini
realmate_challenge/: celery.py  logger.py  settings.py  urls.py
realmate_challenge_app/: admin.py  apps.py  models.py  signals.py  tasks.py  views.py
realmate_challenge_app/migrations/: 0001_initial.py  0002_rename_started_at_conversation_created_at_and_more.py  0003_rename_conversation_message_conversation_id_and_more.py  0004_conversation_timestamp_alter_message_type.py  0005_alter_message_timestamp.py  0006_alter_message_conversation_id.py  0007_message_expected_conversation_id.py  0008_message_processed.py  0009_alter_message_timestamp.py
realmate_challenge_app/serializers/: payloads.py  responses.py
realmate_challenge_app/tests/fixtures/: models.py  payloads.py  urls.py  utils.py
realmate_challenge_app/tests/plugins/: docker.py
realmate_challenge_app/tests/test_integration/: test_views.py
realmate_challenge_app/tests/test_unit/: test_signals.py  test_tasks.py
